go compile and execute

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
   "deno.enable": true,
   "deno.lint": true,
-  "deno.unstable": true
+  "deno.unstable": true,
+  "cSpell.words": [
+    "Sleb",
+    "plength",
+    "putc"
+  ]
 }
