--- a/ruby/Makefile
+++ b/ruby/Makefile
@@ -3,20 +3,20 @@ RED = \033[0;31m
 NC = \033[0m
 GRN = \033[0;32m
 
-.PHONY : clean example run test output.txt
+.PHONY : clean example run test example.txt
 
 clean:
-	@rm -f ./output.*
+	@rm -f ./example.*
 
 example:
 	cat ../ff/example.ff | ruby ./execute.rb
 
 run: clean example
 
-test:	output.txt
+test:	example.txt
 
-output.txt:
+example.txt:
 	@echo "** Ruby Compile and Execute **"
-	@time cat ../ff/example.ff | ruby ./execute.rb > output.txt
-	@cmp --silent -- "./output.txt" "../output.txt" && printf "${GRN}OK${NC}\n" || printf "${RED}outouts differ${NC}\n"
+	@time cat ../ff/example.ff | ruby ./execute.rb > example.txt
+	@cmp --silent -- "./example.txt" "../fixtures/example.txt" && printf "${GRN}OK${NC}\n" || printf "${RED}outouts differ${NC}\n"
 	@echo ""
