--- a/go/Makefile
+++ b/go/Makefile
@@ -21,13 +21,13 @@ run: compile execute example
 
 test:	compile execute example.bin example.txt
 
-example.bin:
+example.bin: compile
 	@echo "** Go Compile **"
 	@time cat ../ff/example.ff | ./compile > ./example.bin
 	@cmp --silent -- "./example.bin" "../fixtures/example.bin" && printf "${GRN}OK${NC}\n" || printf "${RED}bins differ${NC}\n"
 	@echo ""
 
-example.txt:
+example.txt: execute
 	@echo "** Go Execute **"
 	@time cat ./example.bin | ./execute > ./example.txt
 	@cmp --silent -- "./example.txt" "../fixtures/example.txt" && printf "${GRN}OK${NC}\n" || printf "${RED}outouts differ${NC}\n"
