--- a/deno/Makefile
+++ b/deno/Makefile
@@ -17,12 +17,12 @@ test:	example.bin example.txt
 
 example.bin:
 	@printf "** Deno Compile **"
-	@time cat ../ff/example.ff | deno run ./cmds/compile.ts > ./example.bin
-	@cmp --silent -- "./example.bin" "../fixtures/example.bin" && printf "${GRN}OK${NC}\n" || printf "${RED}bins differ${NC}\n"
+	@time cat ../ff/example2.ff | deno run ./cmds/compile.ts > ./example2.bin
+	@cmp --silent -- "./example2.bin" "../fixtures/example2.bin" && printf "${GRN}OK${NC}\n" || printf "${RED}bins differ${NC}\n"
 	@echo ""
 
 example.txt:
 	@echo "** Deno Execute **"
-	@time cat ./example.bin | deno run ./cmds/execute.ts > ./example.txt
+	@time cat ./example2.bin | deno run ./cmds/execute.ts > ./example.txt
 	@cmp --silent -- "./example.txt" "../fixtures/example.txt" && printf "${GRN}OK${NC}\n" || printf "${RED}outouts differ${NC}\n"
 	@echo ""
