improve deno cli options

--- a/deno/Makefile
+++ b/deno/Makefile
@@ -9,18 +9,18 @@ clean:
 	@rm -f ./example.*
 
 run:
-	cat ../ff/example2.ff | ./bin/ff.ts run
+	./bin/ff.ts compile ../ff/example2.ff | ./bin/ff.ts execute
 
 test:	example.bin example.txt
 
 example.bin:
 	@printf "** Deno Compile **"
-	@time cat ../ff/example2.ff | ./bin/ff2ffb.ts compile > ./example2.bin
+	@time ./bin/ff2ffb.ts ../ff/example2.ff > ./example2.bin
 	@cmp --silent -- "./example2.bin" "../fixtures/example2.bin" && printf "${GRN}OK${NC}\n" || printf "${RED}bins differ${NC}\n"
 	@echo ""
 
 example.txt:
 	@echo "** Deno Execute **"
-	@time cat ./example2.bin | ./bin/ffb-interp.ts > ./example.txt
+	@time ./bin/ffb-interp.ts ./example2.bin > ./example.txt
 	@cmp --silent -- "./example.txt" "../fixtures/example.txt" && printf "${GRN}OK${NC}\n" || printf "${RED}outouts differ${NC}\n"
 	@echo ""
