--- a/go/Makefile
+++ b/go/Makefile
@@ -24,7 +24,7 @@ test:	compile execute example.bin example.txt
 example.bin:
 	@echo "** Go Compile **"
 	@time cat ../ff/example.ff | ./compile > ./example.bin
-	@cmp --silent -- "./example.bin" "../fixtures/example.bin" && printf "${GRN}OK${NC}\n" || printf "${RED}bins differ${NC}\n"
+	@cmp --silent -- "./example.bin" "../fixtures/example_v1.bin" && printf "${GRN}OK${NC}\n" || printf "${RED}bins differ${NC}\n"
 	@echo ""
 
 example.txt:
