--- a/go/Makefile
+++ b/go/Makefile
@@ -7,7 +7,7 @@ GRN = \033[0;32m
 .PHONY : clean example run repl test example.bin example.txt ff-tests
 
 clean:
-	@rm -f ./example.*
+	@rm -f ./artifacts ./build
 
 build/%: ./cmd/compile/*.go ./src/**/*.go
 	go build -o ./build/$* ./cmd/$*
@@ -23,12 +23,12 @@ ff-tests: build/run
 
 example.bin: build/compile
 	@printf "** Go Compile **"
-	@time cat ../ff/example_v2.ff | ./build/compile > ./example.bin
-	@cmp --silent -- "./example.bin" "../fixtures/example_v2.bin" && printf "${GRN}OK${NC}\n" || printf "${RED}bins differ${NC}\n"
+	@time cat ../ff/example_v2.ff | ./build/compile > ./artifacts/example.bin
+	@cmp --silent -- "./artifacts/example.bin" "../fixtures/example_v2.bin" && printf "${GRN}OK${NC}\n" || printf "${RED}bins differ${NC}\n"
 	@echo ""
 
 example.txt: build/execute
 	@printf "** Go Execute **"
-	@time cat ./example.bin | ./build/execute > ./example.txt
-	@cmp --silent -- "./example.txt" "../fixtures/example.txt" && printf "${GRN}OK${NC}\n" || printf "${RED}outouts differ${NC}\n"
+	@time cat ./artifacts/example.bin | ./build/execute > ./artifacts/example.txt
+	@cmp --silent -- "./artifacts/example.txt" "../fixtures/example.txt" && printf "${GRN}OK${NC}\n" || printf "${RED}outouts differ${NC}\n"
 	@echo ""
