--- a/go/Makefile
+++ b/go/Makefile
@@ -4,8 +4,9 @@ NC = \033[0m
 GRN = \033[0;32m
 
 .DEFAULT_GOAL := build
-.PHONY : clean example run repl test example.bin example.txt ff-tests
+.PHONY : example.bin example.txt ff-tests
 
+.PHONY : clean 
 clean:
 	@rm -f ./artifacts ./build
 
@@ -14,21 +15,24 @@ build/%: ./cmd/compile/*.go ./src/**/*.go
 
 build: build/compile build/execute build/run build/repl
 
-test:	build ff-tests example.bin example.txt 
+.PHONY : test
+test:	build ff-tests ./artifacts/example.ffb ./artifacts/example.txt
 
 ff-tests: build/run
 	@printf "** Go FF Test **"
-	@cd ..; time cat ./ff/tests.ff | ./go/build/run && printf "${GRN}OK${NC}\n" || printf "${RED}FAILED${NC}\n"
+	@cd ..; time cat ./ff/tests.ffp | ./go/build/run && printf "${GRN}OK${NC}\n" || printf "${RED}FAILED${NC}\n"
 	@echo ""
 
-example.bin: build/compile
+.PHONY : ./artifacts/example.ffb
+./artifacts/example.ffb: build/compile
 	@printf "** Go Compile **"
-	@time cat ../ff/example_v2.ff | ./build/compile > ./artifacts/example.bin
-	@cmp --silent -- "./artifacts/example.bin" "../fixtures/example_v2.bin" && printf "${GRN}OK${NC}\n" || printf "${RED}bins differ${NC}\n"
+	@time cat ../ff/example.ff | ./build/compile > ./artifacts/example.ffb
+	@cmp --silent -- "./artifacts/example.ffb" "../fixtures/example.ffb" && printf "${GRN}OK${NC}\n" || printf "${RED}bins differ${NC}\n"
 	@echo ""
 
-example.txt: build/execute
+.PHONY : ./artifacts/example.txt
+./artifacts/example.txt: build/execute
 	@printf "** Go Execute **"
-	@time cat ./artifacts/example.bin | ./build/execute > ./artifacts/example.txt
+	@time cat ./artifacts/example.ffb | ./build/execute > ./artifacts/example.txt
 	@cmp --silent -- "./artifacts/example.txt" "../fixtures/example.txt" && printf "${GRN}OK${NC}\n" || printf "${RED}outouts differ${NC}\n"
 	@echo ""
